# Add current directory to include search path (so tests can find headers)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

# Modify this file as you need for your project (modeled on the most relevant assignment), e.g.
# uncomment the following and add the relevant files for your project
#add_executable(project-main
#  main.cc
#)